--- a/templates/map.html
+++ b/templates/map.html
@@ -45,6 +45,9 @@
         	height: 100vh;
         	width: 100vw;
         }
+        div.gmnoprint {
+            display: none;
+        }
     </style>
 	</head>
 	<body id="top">
@@ -81,7 +84,6 @@
 						<span class="switch-handle"></span>
 					</label>
 				</div>
-			<button id="trigger-overlay">Test overlay</button>
 		</nav>
 
 		<div id="main" class="container">
@@ -90,14 +92,6 @@
 			<div id="zoom-out">OUT</div>
     </div>
 
-		<div class="overlay overlay-contentscale">
-			<button type="button" class="overlay-close">Close</button>
-			<nav>
-				<ul>
-					<li><a href="#">Login Details Here</a></li>
-				</ul>
-			</nav>
-		</div>
 
   </body>
 
